update api generator
