# api/api.gen.go
@@ -1,6 +1,6 @@
-// Package api provides primitives to interact the openapi HTTP API.
+// Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package api
 
 import (
@@ -8,65 +8,60 @@ import (
 	"net/http"
 
 	"github.com/deepmap/oapi-codegen/pkg/runtime"
-	"github.com/go-chi/chi"
+	"github.com/go-chi/chi/v5"
 )
 
-// User defines model for User.
-type User struct {
-	Department string `json:"department"`
-	Email      string `json:"email"`
-	FirstName  string `json:"firstName"`
-	Id         string `json:"id"`
-	LastName   string `json:"lastName"`
-	Role       string `json:"role"`
+// Defines values for NewTaskState.
+const (
+	NewTaskStateActive NewTaskState = "active"
+
+	NewTaskStateDone NewTaskState = "done"
+
+	NewTaskStateFailed NewTaskState = "failed"
+
+	NewTaskStatePlanned NewTaskState = "planned"
+)
+
+// NewTask defines model for NewTask.
+type NewTask struct {
+	Name  string       `json:"name"`
+	State NewTaskState `json:"state"`
 }
 
-// Newtask defines model for Newtask.
-type Newtask struct {
-	Name     string  `json:"name"`
-	Progress float32 `json:"progress"`
-	State    string  `json:"state"`
-}
+// NewTaskState defines model for NewTask.State.
+type NewTaskState string
 
-// task defines model for task.
-type task struct {
-	// Embedded struct due to allOf(#/components/schemas/Newtask)
-	Newtask `yaml:",inline"`
+// Task defines model for Task.
+type Task struct {
+	// Embedded struct due to allOf(#/components/schemas/NewTask)
+	NewTask `yaml:",inline"`
 	// Embedded fields due to inline allOf schema
-	Id    string    `json:"id"`
-	Owner *User `json:"owner,omitempty"`
+	Id    string `json:"id"`
+	Owner *User  `json:"owner,omitempty"`
 
 	// paticipants in the task
 	Paticipants *[]User `json:"paticipants,omitempty"`
 }
 
+// User defines model for User.
+type User struct {
+	Email     string `json:"email"`
+	FirstName string `json:"firstName"`
+	Id        string `json:"id"`
+	LastName  string `json:"lastName"`
+}
+
 // CreatetaskJSONBody defines parameters for Createtask.
-type CreatetaskJSONBody Newtask
+type CreatetaskJSONBody NewTask
 
 // UpdatetaskJSONBody defines parameters for Updatetask.
-type UpdatetaskJSONBody Newtask
-
-// AssigntaskOwnerJSONBody defines parameters for AssigntaskOwner.
-type AssigntaskOwnerJSONBody struct {
-	UserId *string `json:"UserId,omitempty"`
-}
-
-// AssigntaskParticipantsJSONBody defines parameters for AssigntaskParticipants.
-type AssigntaskParticipantsJSONBody struct {
-	UserIds *[]string `json:"UserIds,omitempty"`
-}
+type UpdatetaskJSONBody NewTask
 
 // CreatetaskJSONRequestBody defines body for Createtask for application/json ContentType.
 type CreatetaskJSONRequestBody CreatetaskJSONBody
 
 // UpdatetaskJSONRequestBody defines body for Updatetask for application/json ContentType.
 type UpdatetaskJSONRequestBody UpdatetaskJSONBody
-
-// AssigntaskOwnerJSONRequestBody defines body for AssigntaskOwner for application/json ContentType.
-type AssigntaskOwnerJSONRequestBody AssigntaskOwnerJSONBody
-
-// AssigntaskParticipantsJSONRequestBody defines body for AssigntaskParticipants for application/json ContentType.
-type AssigntaskParticipantsJSONRequestBody AssigntaskParticipantsJSONBody
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
@@ -75,19 +70,13 @@ type ServerInterface interface {
 	GetUsers(w http.ResponseWriter, r *http.Request)
 	// Get all tasks
 	// (GET /tasks)
-	Gettasks(w http.ResponseWriter, r *http.Request)
+	GetTasks(w http.ResponseWriter, r *http.Request)
 	// Create new task
 	// (POST /tasks)
 	Createtask(w http.ResponseWriter, r *http.Request)
 	// Update task
 	// (PUT /tasks/{id})
 	Updatetask(w http.ResponseWriter, r *http.Request, id string)
-	// Assign owner to task
-	// (POST /tasks/{id}/assign/owner)
-	AssigntaskOwner(w http.ResponseWriter, r *http.Request, id string)
-	// Assign participants to task
-	// (POST /tasks/{id}/assign/participants)
-	AssigntaskParticipants(w http.ResponseWriter, r *http.Request, id string)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -113,12 +102,12 @@ func (siw *ServerInterfaceWrapper) GetUsers(w http.ResponseWriter, r *http.Reque
 	handler(w, r.WithContext(ctx))
 }
 
-// Gettasks operation middleware
-func (siw *ServerInterfaceWrapper) Gettasks(w http.ResponseWriter, r *http.Request) {
+// GetTasks operation middleware
+func (siw *ServerInterfaceWrapper) GetTasks(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.Gettasks(w, r)
+		siw.Handler.GetTasks(w, r)
 	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -169,58 +158,6 @@ func (siw *ServerInterfaceWrapper) Updatetask(w http.ResponseWriter, r *http.Req
 	handler(w, r.WithContext(ctx))
 }
 
-// AssigntaskOwner operation middleware
-func (siw *ServerInterfaceWrapper) AssigntaskOwner(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "id" -------------
-	var id string
-
-	err = runtime.BindStyledParameter("simple", false, "id", chi.URLParam(r, "id"), &id)
-	if err != nil {
-		http.Error(w, fmt.Sprintf("Invalid format for parameter id: %s", err), http.StatusBadRequest)
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AssigntaskOwner(w, r, id)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// AssigntaskParticipants operation middleware
-func (siw *ServerInterfaceWrapper) AssigntaskParticipants(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "id" -------------
-	var id string
-
-	err = runtime.BindStyledParameter("simple", false, "id", chi.URLParam(r, "id"), &id)
-	if err != nil {
-		http.Error(w, fmt.Sprintf("Invalid format for parameter id: %s", err), http.StatusBadRequest)
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AssigntaskParticipants(w, r, id)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
 // Handler creates http.Handler with routing matching OpenAPI spec.
 func Handler(si ServerInterface) http.Handler {
 	return HandlerWithOptions(si, ChiServerOptions{})
@@ -262,19 +199,13 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Get(options.BaseURL+"/Users", wrapper.GetUsers)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/tasks", wrapper.Gettasks)
+		r.Get(options.BaseURL+"/tasks", wrapper.GetTasks)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/tasks", wrapper.Createtask)
 	})
 	r.Group(func(r chi.Router) {
 		r.Put(options.BaseURL+"/tasks/{id}", wrapper.Updatetask)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/tasks/{id}/assign/owner", wrapper.AssigntaskOwner)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/tasks/{id}/assign/participants", wrapper.AssigntaskParticipants)
 	})
 
 	return r
