# api/update_task.go
@@ -8,7 +8,7 @@ import (
 
 func(s *Server) UpdateTask(w http.ResponseWriter, r *http.Request, id string){
 
-	var newTask Newtask
+	var newTask NewTask
 
 	if err := json.NewDecoder(r.Body).Decode(&newTask); err != nil {
 		w.WriteHeader(http.StatusBadRequest)
@@ -22,7 +22,7 @@ func(s *Server) UpdateTask(w http.ResponseWriter, r *http.Request, id string){
 		State:        domains.EnumtaskState(newTask.State),
 	}
 
-	res, err := s.svc.Updatetask(task, id)
+	res, err := s.svc.UpdateTask(task, id)
 
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
